--- a/FE/index.html
+++ b/FE/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="NNrvGFS8EiuS5LIaCusKoWwmiWCCtE42e5XcYxE_8kk" />
     <title>리앤생</title>
   </head>
   <body>
