Chore: 홈페이지 제목 변경

--- a/FE/index.html
+++ b/FE/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="NNrvGFS8EiuS5LIaCusKoWwmiWCCtE42e5XcYxE_8kk" />
-    <title>리앤생</title>
+    <title>주식회사 리앤생</title>
   </head>
   <body>
     <div id="root"></div>
